fixed header layout on small screens

--- a/static/css/SlideZ.css
+++ b/static/css/SlideZ.css
@@ -1,3 +1,4 @@
+/* HTML5 display-role reset for older browsers */
 * {
   margin: 0;
   padding: 0;
@@ -104,6 +105,20 @@ ol {
   background-position: center;
   background-repeat: no-repeat;
 }
+.toolbarBackground {
+  background-color: #c75a27;
+  background-image: -moz-linear-gradient(top, #cd6723, #be462d);
+  background-image: -ms-linear-gradient(top, #cd6723, #be462d);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#cd6723), to(#be462d));
+  background-image: -webkit-linear-gradient(top, #cd6723, #be462d);
+  background-image: -o-linear-gradient(top, #cd6723, #be462d);
+  background-image: linear-gradient(top, #cd6723, #be462d);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#cd6723', endColorstr='#be462d', GradientType=0);
+  -webkit-box-shadow: 0 0 1px #333333;
+  -moz-box-shadow: 0 0 1px #333333;
+  box-shadow: 0 0 1px #333333;
+}
 h1 {
   font-weight: 300;
   font-size: 23px;
@@ -148,29 +163,26 @@ button * {
 .alignLeft {
   float: left;
 }
-body section#body[data-view="splash"] {
-  background-image: url(/static/img/app-texture.png);
-  display: table;
-  width: 100%;
-  height: 100%;
-}
 body section#body[data-view="splash"] h1 {
   font-family: 'Nothing You Could Do', sans-serif;
   font-size: 4em;
   margin: 0.5em;
   color: #008caa;
 }
-body section#body[data-view="splash"] .login {
-  position: relative;
-  display: table-cell;
-  vertical-align: middle;
-  text-align: center;
-  margin: auto;
-  height: 100%;
-}
 @media (max-width: 699px), (orientation: portrait) {
-  body section#body[data-view="splash"] .login {
+  body section#body[data-view="splash"] {
+    display: table;
     width: 100%;
+    height: 100%;
+  }
+  body section#body[data-view="splash"] .login {
+    position: relative;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    margin: auto;
+    width: 100%;
+    height: 100%;
   }
   body section#body[data-view="splash"] .image {
     display: none;
@@ -178,11 +190,20 @@ body section#body[data-view="splash"] .login {
 }
 @media (min-width: 700px) {
   body section#body[data-view="splash"] {
-    padding-left: 5%;
-    padding-right: 5%;
+    display: table;
+    width: 90%;
+    height: 100%;
+    margin-left: 5%;
+    margin-right: 5%;
   }
   body section#body[data-view="splash"] .login {
+    position: relative;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    margin: auto;
     width: 50%;
+    height: 100%;
   }
   body section#body[data-view="splash"] .image {
     display: table-cell;
@@ -213,20 +234,24 @@ body section#body[data-view="home"] header {
   -moz-box-shadow: 0 0 1px #333333;
   box-shadow: 0 0 1px #333333;
 }
-body section#body[data-view="home"] header  > * {
-  display: inline-block;
-}
 body section#body[data-view="home"] header h1 {
   color: #ffffff;
   max-height: 100%;
   height: 100%;
   line-height: 44px;
-  margin-left: 10px;
-  margin-right: 10px;
-  overflow: hidden;
 }
-body section#body[data-view="home"] header button.alignRight {
-  margin-right: 1px;
+body section#body[data-view="home"] header.home  > * {
+  position: absolute;
+}
+body section#body[data-view="home"] header.home h1 {
+  left: 10px;
+  right: 39px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+body section#body[data-view="home"] header.home button#accountManager {
+  right: 0;
   border-left: solid 1px #be462d;
 }
 body section#body[data-view="home"] article {
