--- a/styles/toolbar.less
+++ b/styles/toolbar.less
@@ -1,3 +1,8 @@
+.toolbarBackground{
+	#gradient > .vertical(@orangeDrab, @orangeDark);
+	.box-shadow(0 0 1px @grayDarker);
+}
+
 .toolbar(@_){
 	article{
 		position: fixed;
@@ -11,29 +16,33 @@
 		width:100%;
 		overflow:hidden;
 
-		#gradient > .vertical(@orangeDrab, @orangeDark);
-	    .box-shadow(0 0 1px @grayDarker);
+		.toolbarBackground();
 
-	    & > *{
-	    	display:inline-block;
-	    }
-
-		h1 {
+		h1{
 			color:@white;
 
 			max-height:100%;
 			height:100%;
 			line-height:@toolbarHeight + 5px;
-
-			margin-left:10px;
-			margin-right:10px;
-
-			overflow: hidden;
 		}
 
-		button.alignRight {
-			margin-right:1px;
-			border-left:solid 1px @orangeDark;
+		&.home{
+			& > * {
+				position:absolute;
+			}
+
+			h1{
+				left:10px;
+				right:@buttonHeight;
+				overflow:hidden;
+				white-space: nowrap;
+				text-overflow: ellipsis;
+			}
+
+			button#accountManager {
+				right:0;
+				border-left:solid 1px @orangeDark;
+			}
 		}
 	}
 }
